--- a/index.html
+++ b/index.html
@@ -22,30 +22,29 @@
                 Art Cayman Co.
             </div>
             <div class="menu">
-                <a href="">Explore</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
+                <a href="https://gallery.artcayman.ky">The Gallery</a>
+                <a href="https://prints.artcayman.ky"">The Print Shop</a>
+                <a href="https://chris.artcayman.ky">Chris Christian</a>
             </div>
         </nav>
     </header>
     <main>
-        <div class="video-overlay">hello</div>
         <div class="hero">
             <img src="./img/acc-logo-white.svg" alt="Logo">
         </div>
         <section>
-            <div class="item">
+            <a class="item" href="https://gallery.artcayman.ky">
                 <h4>The Gallery</h4>
                 <img src="./img/icons/accicon-gallery.svg" alt="Gallery">
-            </div>
-            <div class="item">
+            </a>
+            <a class="item" href="https://prints.artcayman.ky">
                 <h4>The Print Shop</h4>
                 <img src="./img/icons/accicon-print.svg" alt="Printing">
-            </div>
-            <div class="item">
+            </a>
+            <a class="item" href="https:/chris.artcayman.ky">
                 <h4>Chris Christian</h4>
                 <img src="./img/icons/accicon-chris.svg" alt="Chris Christian">
-            </div>
+            </a>
         </section>
         <div class="services-container">
 
@@ -59,7 +58,7 @@
                             <p>Best & largest art gallery in The Cayman Islands</p>
                         </div>
                         <div class="cta">
-                            <a href="#">Know More</a>
+                            <a href="https://gallery.artcayman.ky">Know More</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +76,7 @@
                             </div>
                         </div>
                         <div class="cta">
-                            <a href="#">Know More</a>
+                            <a href="https://prints.artcayman.ky">Know More</a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +92,7 @@
                             <p>Passionate supporter of Cayman’s traditional and contemporary art scene.</p>
                         </div>
                         <div class="cta">
-                            <a href="#">Know More</a>
+                            <a href="https://chris.artcayman.ky">Know More</a>
                         </div>
                     </div>
                 </div>
